# libsodium

./: .gitignore  .travis.yml  CMakeLists.txt
